# i3dr_kinova-ros

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ros-build.yml
i3dr_kinova_control/: CMakeLists.txt  package.xml
i3dr_kinova_control/launch/: gen3_driver_titania.launch  gen3_titania.launch  kinova_titania.launch  mozaic.launch  octomap.launch  playback_rosbag.launch
i3dr_kinova_control/rviz/: gen3_titania.rviz  gen3_titania_bag.rviz  kinova_titania.rviz
i3dr_kinova_control/urdf/: i3dr_titania_kinova_gen3_standalone.urdf.xacro  i3dr_titania_kinova_standalone.urdf.xacro  interfacing_plate.urdf.xacro
i3dr_kinova_control/worlds/: room.world
i3dr_titania_kinova_gen3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
i3dr_titania_kinova_gen3_moveit_config/config/: joint_limits.yaml  ros_controllers.yaml
i3dr_titania_kinova_gen3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gen3_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+7 more)
i3dr_titania_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
install/: i3dr_kinova_https.rosinstall  i3dr_kinova_ssh.rosinstall
launch/: kinova_control.launch  kinova_titania.launch
mesh/: interfacing_plate_kinova.stl
rviz/: kinova_titania.rviz
urdf/: i3dr_titania_kinova.urdf.xacro  interfacing_plate.urdf.xacro  j2s7s000_standalone.xacro
worlds/: room_empty.world
(+22 files in other folders)
