<?xml version="1.0"?>
<package format="2">

  <name>i3dr_kinova_control</name>
  <version>0.0.1</version>
  <description>
    Control package for I3DR stereo cameras and Kinova robotic arms
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://i3drobotics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>rtabmap_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>kinova_gazebo</depend>
  <depend>kinova_description</depend>
  <depend>moveit</depend>
  <depend>trac_ik_kinematics_plugin</depend>

</package>
